# dpylens

./: .dockerignore  .gitignore  DOCKER_COMPOSE.md  Dockerfile  README.md  cli.py  docker-compose.yml  pyproject.toml
analyzer/: callgraph.py  imports.py  models.py  visualize.py
api/: README.md  __init__.py  main.py  requirements.txt  summary_builder.py
docs/: 02-ast-notes.md  03-cli-analyzer-step1.md
dpylens/: cli.py
dpylens/analyzer/: __init__.py  aliases.py  callgraph.py  callgraph_resolve.py  dataflow.py  imports.py  layout.py  models.py  modulegraph.py  parser.py  patterns.py  routes_litestar.py  scanner.py  visualize.py  visualize_dataflow.py  visualize_modulegraph.py
dpylens/docs/: 01-Code-Analyzer-Visualizer.MD  04-patterns-dataflow-step2.md  05-module-graph-step3.md  06-callgraph-resolution-step5.md  07-static-html-report-step6.md  08-run-command-step8.md  TESTING_OTHER_REPOS.md
dpylens/rendering/: __init__.py  graphviz.py
dpylens/reporter/: __init__.py  html_report.py
tests/: test_call_resolution.py  test_layout_module_naming.py  test_layout_monorepo.py  test_module_name.py  test_relative_import_aliases.py
web/: Dockerfile  README.md  index.html  package-lock.json  package.json  tailwind.config.js
web/src/: main.tsx  styles.css
web/src/lib/: api.ts
web/src/pages/: LandingPage.tsx
