[project]
name = "dpylens"
version = "0.1.0"
description = "DevOps Python Intelligence Platform"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
  "graphviz>=0.20.3",
]

[project.scripts]
dpylens = "dpylens.cli:main"

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"